--- a/EmployeeManagement.Web/Pages/DisplayEmployee.razor
+++ b/EmployeeManagement.Web/Pages/DisplayEmployee.razor
@@ -1,11 +1,13 @@
 ﻿@inherits DisplayEmployeeBase
 
+
 <div class="card m-3" style="min-width: 18rem; max-width:30.5%;">
     <div class="card-header">
+        <input type="checkbox" @onchange="CheckBoxChanged" />
         <h3>@Employee.FirstName  @Employee.LastName</h3>
     </div>
 
-    <img class="card-img-top imageThumbnail" src="@Employee.PhotoPath" />
+    <img class="card-img-top image-thumbnail" src="@Employee.PhotoPath" />
 
     @if (ShowFooter)
     {
