--- a/EmployeeManagement.Web/Pages/EmployeeList.razor
+++ b/EmployeeManagement.Web/Pages/EmployeeList.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 @inherits EmployeeListBase
 
-<h3>Employee List</h3>
+<h3>Employee List: Selected Employee Count - @SelectedEmployeeCount</h3>
 
 @if (Employees == null)
 {
@@ -13,10 +13,11 @@ else
     <div class="card-deck">
         <input id="showFooter" type="checkbox" @bind="ShowChildFooter" value="Toggle Footer" />
         <label for="showFooter">Show Footer</label>
+        <div class="card-group">
         @foreach (var employee in Employees)
         {
-            <DisplayEmployee Employee="employee" ShowFooter="ShowChildFooter"></DisplayEmployee>
+            <DisplayEmployee Employee="employee" ShowFooter="ShowChildFooter" OnEmployeeSelection="EmployeeSelectionChanged"></DisplayEmployee>
         }
-
+        </div>
     </div>
 }
