--- a/EmployeeManagement.Web/Pages/EmployeeDetails.razor
+++ b/EmployeeManagement.Web/Pages/EmployeeDetails.razor
@@ -33,7 +33,7 @@ else
                 
                 <div class="card-footer text-center @MenuClass">
                     <a href="/" class="btn btn-primary">Back</a>
-                    <a href="#" class="btn btn-primary">Edit</a>
+                    <a href="@($"/editemployee/{Employee.EmployeeId}")" class="btn btn-primary">Edit</a>
                     <a href="#" class="btn btn-danger">Delete</a>
                 </div>
             </div>
